swaync: update font size to fix overflow errors

--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,6 +1,6 @@
 * {
   all: unset;
-  font-size: 12pt;
+  font-size: 15px;
   font-family: "Iosevka Nerd Font";
   transition: 200ms;
 }
